--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,13 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
+                <artifactId>maven-war-plugin</artifact\Id>
                 <version>3.3.2</version>
             </plugin>
         </plugins>
   </build>
+  <properties>
+      <sonar.organization>arun-kumar-nk</sonar.organization>
+      <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
 </project>
