--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifact\Id>
+                <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
         </plugins>
